[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/enemies/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Bullet_Inimigo/giant-fairy/bullet_giant_f.gd" type="Script" id=2]
[ext_resource path="res://luz redemoinho.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.992157, 0.294118, 0.258824, 0.0666667 ), Color( 0.996078, 0.0392157, 0.0392157, 0.490196 ), Color( 0.992157, 0.294118, 0.258824, 0.0666667 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 8.125

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_estrela_negra:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.435294, 0.435294, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_estrela_negra:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.984314, 1 ), Color( 0.992157, 0.929412, 0.423529, 1 ), Color( 0.431373, 0, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_estrela_negra:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="bullet" type="Area2D"]
collision_layer = 32
script = ExtResource( 2 )

[node name="Light2D" type="Sprite" parent="."]
modulate = Color( 0.995512, 0.0760616, 0.0709599, 0.428975 )
material = SubResource( 6 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 768, 768, 0 )

[node name="anim" type="AnimationPlayer" parent="Light2D"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="bullet_estrela_negra" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 308, 1516, 24, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "glow"
anims/glow = SubResource( 3 )
anims/glow2 = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="timer" type="Node" parent="."]

[node name="slowDash" type="Timer" parent="timer"]
wait_time = 2.0
[connection signal="area_entered" from="." to="." method="_on_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="timer/slowDash" to="." method="_on_slowDash_timeout"]
